--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,14 @@
 
 /*--------------------------------------------Colors*/
 body {
-    background:#D9E1C6;
+   background:#D9E1C6;
 }
 .bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: #d9e1c6;
 }
 
 .ui-menu-color-home {
@@ -205,4 +205,49 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/*--------------------------------------------Three reasons*/
+
+.three-reasons-icon {
+    font-size:26px ;
+    color: #e67e22;
+}
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+/* ----------------------------------------Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
 }
