--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*--------------------------------------------Colors*/
-body {
-   background:#D9E1C6;
-}
+
 .bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #d9e1c6;
+    background-color: #fff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
 }
 
 .ui-menu-color-home {
@@ -26,6 +28,29 @@ body {
 
 .ui-menu-color-download {
     background-color: #525252;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
 }
 
 .row-table {
@@ -45,22 +70,6 @@ body {
     margin-bottom: 40px;
 }
 
-/*--------------------------------------------Special Paddings/Margins/text*/
-h1,
-h2,
-h3,
-h4 {
-    margin:0;
-}
-.uppercase {
-    text-transform: uppercase;
-}
-.general-sub {
-    font-family:'Exo', sans-serif;
-    font-weight: 300;
-    color: #fafafa;
-}
-
 /*--------------------------------------------Heading*/
 
 header {
@@ -72,19 +81,14 @@ header {
 }
 
 .logo {
-    background: url(../images/IMG-1542.JPG);
-    
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
-}
-
-#nav {
-    margin: 0;
 }
 
 .name {
@@ -115,6 +119,10 @@ header {
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -148,14 +156,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*--------------------------------------------Hover .css*/
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*--------------------------------------------Footer*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -207,12 +215,13 @@ footer {
     padding: 20px;
 }
 
-/*--------------------------------------------Three reasons*/
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
-    font-size:26px ;
+    font-size: 26px;
     color: #e67e22;
 }
+
 .three-reasons-heading {
     margin-bottom: 15px;
 }
@@ -250,4 +259,25 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
